feat(gateway,docs): Telegram long-polling logging, read timeout fix, and updated docs to final Gradle stack